settings: Fix alignment of loading message.
The loading message that appears at the
top of the page when loading the Bots/
Uploaded Files/Users/Deactivated Users
page under Settings appears to be misaligned.

We fix this by changing the height of the
loading-spinner to match the line-height
of loading text.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -329,7 +329,7 @@ td .button {
 
     .loading_indicator_spinner {
         width: 30%;
-        height: 30px;
+        height: 20px;
         margin-top: 7px;
         vertical-align: middle;
         display: inline-block;
